comienzo de reestructuracion de estilos

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -12,52 +12,41 @@
     <nav aria-label="Menú principal">
       <ul class="flex flex-col md:flex-row justify-center text-white rounded-lg bg-[#14272a] m-4 md:m-20">
         <li>
-          <a href="#" class="block rounded-lg hover:bg-slate-600 p-4 transition-all duration-300" aria-label="Ir a Talleres">
+          <a href="#" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Ir a Talleres">
             Talleres 
           </a>
         </li>
         <li>
-          <a href="#" class="block rounded-lg hover:bg-slate-600 p-4 transition-all duration-300" aria-label="Ir a Proyectos">
+          <a href="#" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Ir a Proyectos">
             Proyectos 
           </a>
         </li>
         <li>
-          <a href="/softwarelibre" class="block rounded-lg hover:bg-slate-600 p-4 transition-all duration-300" aria-label="Más sobre Software Libre">
+          <a href="/softwarelibre" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Más sobre Software Libre">
             Software Libre 
           </a>
         </li>
         <li>
-          <a href="#" class="block rounded-lg hover:bg-slate-600 p-4 transition-all duration-300" aria-label="Suscríbete">
+          <a href="#" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Suscríbete">
             Suscríbete
           </a>
         </li>
       </ul>
     </nav>
 
-    <div class="bg-[#14272a] mx-auto max-w-3xl px-4 sm:px-6 lg:px-8 py-8 rounded-lg mb-20">
-      <div class="flex flex-col md:flex-row items-center">
-        <div class="flex gap-1 mb-4 md:mb-0" role="group" aria-label="Indicadores de estado">
-          <span class="bg-red-500 inline-block w-3 h-3 rounded-full cursor-pointer" aria-label="Estado crítico"></span>
-          <span class="bg-yellow-500 inline-block w-3 h-3 rounded-full cursor-pointer" aria-label="Estado de advertencia"></span>
-          <span class="bg-green-500 inline-block w-3 h-3 rounded-full cursor-pointer" aria-label="Estado seguro"></span>
-        </div>
-        <h2 class="text-2xl text-main mx-auto pr-12" id="about-aula">
-          ¿Qué es el Aula de Software Libre?
-        </h2>
-      </div>
-      <hr class="my-4 border-t border-main w-full" />
-      <div class="card__content">
-        <p class="text-white mb-4 text-center">
-          En el Aula de Software Libre de la FP de Córdoba, nos dedicamos a fomentar el uso y desarrollo de herramientas tecnológicas basadas en software libre y de código abierto. Nuestro objetivo es proporcionar una formación práctica y accesible en tecnologías que permiten la colaboración y la innovación sin las restricciones de licencias privativas.
-        </p>
-        <p class="text-white mb-4 text-center">
-          A través de proyectos colaborativos, aprendemos a utilizar sistemas, tecnologías y aplicaciones libres para el desarrollo de software, la gestión de servidores, y el diseño de soluciones tecnológicas. También promovemos una filosofía de aprendizaje colectivo, donde el intercambio de conocimientos y la contribución a la comunidad son esenciales.
-        </p>
-        <p class="text-white text-center">
-          Fomentamos el espíritu emprendedor y la autonomía técnica, capacitando a los estudiantes para resolver problemas tecnológicos con soluciones abiertas y escalables, siempre respetando los principios de libertad, privacidad y cooperación que definen al software libre.
-        </p>
-      </div>
-    </div>
+    <section id="equipo" class="flex gap-6 mt-40 mb-52">
+      <div class="bg-white w-44 h-60 "></div>
+      <div class="bg-white w-44 h-60 "></div>
+      <div class="bg-white w-44 h-60 "></div>
+      <div class="bg-white w-44 h-60 "></div>
+      <div class="bg-white w-44 h-60 "></div>
+      <div class="bg-white w-44 h-60 "></div>
+      <div class="bg-white w-44 h-60 "></div>
+      <div class="bg-white w-44 h-60 "></div>
+      <div class="bg-white w-44 h-60 "></div>
+      <div class="bg-white w-44 h-60 "></div>
+    </section>
+
 
   </div>
 </section>
