--- a/src/components/Login.astro
+++ b/src/components/Login.astro
@@ -14,7 +14,7 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
       class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-16 leading-tight"
     >
       <span class="text-white">Inicio de </span>
-      <span class="typing text-main">sesión</span>
+      <span class="text-main">sesión</span>
     </h1>
 
     <section class="w-full max-w-xl mx-auto px-8 py-12 bg-[#14272a]/30 rounded-xl backdrop-blur-sm mb-32">
