--- a/src/components/Register.astro
+++ b/src/components/Register.astro
@@ -14,7 +14,7 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
       class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-16 leading-tight"
     >
       <span class="text-white">Crea una </span>
-      <span class="typing text-main">cuenta</span>
+      <span class="text-main">cuenta</span>
     </h1>
 
     <section class="w-full max-w-xl mx-auto px-8 py-12 bg-[#14272a]/30 rounded-xl backdrop-blur-sm mb-32">
@@ -34,7 +34,7 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
                 />
                 <label
                   for="username"
-                  class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
+                  class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-white transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
                   >Nombre de usuario</label
                 >
               </div>
@@ -49,7 +49,7 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
                 />
                 <label
                   for="password"
-                  class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
+                  class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-white transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
                   >Contraseña</label
                 >
               </div>
@@ -64,7 +64,7 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
                 />
                 <label
                   for="confirmPassword"
-                  class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
+                  class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-white transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
                   >Repetir Contraseña</label
                 >
               </div>
