--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -2,28 +2,28 @@
   class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-hero-gradient bg-center bg-cover bg-clip-padding"
   aria-labelledby="main-title"
 >
-  <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8 text-center">
-    <h1 id="main-title" class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-4 leading-tight">
+  <div class="mx-auto px-4 sm:px-6 lg:px-8 text-center">
+    <h1 id="main-title" class="max-w-lg mx-auto font-bold text-4xl sm:text-5xl lg:text-6xl text-white mb-4 leading-tight">
       <span class="text-main">Aula de Software Libre</span>
       <br>
       <span class="text-white">FP Córdoba</span>
     </h1>
 
-    <nav aria-label="Menú principal">
-      <ul class="flex flex-col md:flex-row justify-center text-white rounded-lg bg-[#14272a] m-4 md:m-20">
+    <nav aria-label="Menú principal" class="flex items-center justify-center">
+      <ul class="flex flex-col sm:flex-row text-white rounded-lg bg-[#14272a] m-4 sm:m-8 md:m-10 lg:m-12 max-w-[29rem]">
         <li>
           <a href="#" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Ir a Talleres">
-            Talleres 
+            Talleres
           </a>
         </li>
         <li>
           <a href="#" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Ir a Proyectos">
-            Proyectos 
+            Proyectos
           </a>
         </li>
         <li>
           <a href="/softwarelibre" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Más sobre Software Libre">
-            Software Libre 
+            Software Libre
           </a>
         </li>
         <li>
@@ -34,19 +34,37 @@
       </ul>
     </nav>
 
-    <section id="equipo" class="flex gap-6 mt-40 mb-52">
-      <div class="bg-white w-44 h-60 "></div>
-      <div class="bg-white w-44 h-60 "></div>
-      <div class="bg-white w-44 h-60 "></div>
-      <div class="bg-white w-44 h-60 "></div>
-      <div class="bg-white w-44 h-60 "></div>
-      <div class="bg-white w-44 h-60 "></div>
-      <div class="bg-white w-44 h-60 "></div>
-      <div class="bg-white w-44 h-60 "></div>
-      <div class="bg-white w-44 h-60 "></div>
-      <div class="bg-white w-44 h-60 "></div>
+    <section id="equipo" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-5 gap-6 mt-16 mb-52 justify-items-center">
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
+      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
+        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      </div>
     </section>
-
-
   </div>
 </section>
