--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -3,67 +3,165 @@
   aria-labelledby="main-title"
 >
   <div class="mx-auto px-4 sm:px-6 lg:px-8 text-center">
-    <h1 id="main-title" class="max-w-lg mx-auto font-bold text-4xl sm:text-5xl lg:text-6xl text-white mb-4 leading-tight">
+    <h1
+      id="main-title"
+      class="mx-auto font-bold text-4xl sm:text-5xl lg:text-6xl text-white mb-4 leading-tight"
+    >
       <span class="text-main">Aula de Software Libre</span>
-      <br>
+      <br />
       <span class="text-white">FP Córdoba</span>
     </h1>
 
     <nav aria-label="Menú principal" class="flex items-center justify-center">
-      <ul class="flex flex-col sm:flex-row text-white rounded-lg bg-[#14272a] m-4 sm:m-8 md:m-10 lg:m-12 max-w-[29rem]">
+      <ul
+        class="flex sm:flex-row text-white rounded-lg bg-[#14272a] m-4 sm:m-8 md:m-10 lg:m-12 max-w-[29rem]"
+      >
         <li>
-          <a href="#" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Ir a Talleres">
+          <a
+            href="#"
+            class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300"
+            aria-label="Ir a Talleres"
+          >
             Talleres
           </a>
         </li>
         <li>
-          <a href="#" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Ir a Proyectos">
+          <a
+            href="#"
+            class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300"
+            aria-label="Ir a Proyectos"
+          >
             Proyectos
           </a>
         </li>
         <li>
-          <a href="/softwarelibre" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Más sobre Software Libre">
-            Software Libre
-          </a>
-        </li>
-        <li>
-          <a href="#" class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300" aria-label="Suscríbete">
-            Suscríbete
+          <a
+            href="#"
+            class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300"
+            aria-label="Suscríbete"
+          >
+            Eventos
           </a>
         </li>
       </ul>
     </nav>
 
-    <section id="equipo" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-5 gap-6 mt-16 mb-52 justify-items-center">
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+    <section id="newsletter">
+      <button
+        class="cursor-pointer w-auto mt-5 md:mt-0 mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-slate-800 rounded-full bg-[#e6ff2b] shadow-xs hover:bg-[#a3af4a] hover:scale-105 transition-all duration-500"
+      >
+        Suscríbete a la newsletter
+        <svg
+          class="ml-2"
+          width="20"
+          height="20"
+          viewBox="0 0 20 20"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
+            stroke="black"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"></path>
+        </svg>
+      </button>
+    </section>
+
+    <section
+      id="equipo"
+      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-5 gap-6 mt-16 mb-52 justify-items-center"
+    >
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Alejandro Moral"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Juan (masón de nivel extremo)"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Ignacio (masón)"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Álvaro (el q ha creao la web) 🐐"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Francisco Bermejo 🐐"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Foto del equipo"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Foto del equipo"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Foto del equipo"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Foto del equipo"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
-      <div class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center">
-        <img src="" alt="Foto del equipo" class="w-full h-full object-cover rounded-md">
+      <div
+        class="bg-[#14272a] text-white rounded-md w-44 sm:w-52 h-60 sm:h-80 flex justify-center items-center"
+      >
+        <img
+          src=""
+          alt="Foto del equipo"
+          class="w-full h-full object-cover rounded-md"
+        />
       </div>
     </section>
   </div>
