implantación nuevo header y mejorando la legibilidad y contexto de la web

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,13 @@
----
----
-
 <header
   class="bg-gradient-to-b from-[#14272a] to-transparent w-screen h-20 fixed z-50"
 >
-  <div class="flex items-center h-full px-4 justify-between">
-    <ul class="flex gap-3 text-slate-400 ml-5">
+  <div class="flex items-center h-full justify-center gap-10">
+    <ul class="flex gap-5 text-slate-400">
       <li>
-        <a href="#" class="hover:text-white transition-all duration-300">
-          Inicio
+        <a href="/">
+          <img src="/logo.svg" alt="Logo del aula" class="size-12 rounded-full hover:scale-125 transition-all duration-500"/>
         </a>
-      </li>
-    </ul>
-    <ul class="flex gap-3 text-slate-400 mr-5">
-      <li>
-        <a href="#contacto" class="hover:text-white transition-all duration-300">
-          Contacto
-        </a>
-      </li>
+      </li> 
     </ul>
   </div>
 </header>
