cambios en el estilizado y mejoras responsive

--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -12,7 +12,7 @@ const apiUrl = import.meta.env.ENDPOINT_MAILS;
         <h1 class="text-white text-4xl md:text-5xl font-bold flex items-center justify-center lg:justify-start gap-5">
           Contacto <FontAwesomeIcon icon={faMailReply} className="text-[#e6ff2b] size-8" />
         </h1>
-        <span class="text-slate-400 text-sm text-center">
+        <span class="text-slate-300 text-sm text-center">
           Contacta con nosotros para más información y unirte a nuestra
           maravillosa comunidad.
         </span>
@@ -57,7 +57,7 @@ const apiUrl = import.meta.env.ENDPOINT_MAILS;
   </div>
 </section>
 
-<div id="alertContainer" class="fixed bottom-10 right-4 flex justify-center items-end z-50 hidden">
+<div id="alertContainer" class="fixed bottom-10 right-4 justify-center items-end z-50 hidden">
   <div id="alertMessage" class="flex flex-col gap-2 w-72 sm:w-80 text-xs sm:text-sm z-50">
     
   </div>
