--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,17 +4,63 @@ import { faLinkedin } from "@fortawesome/free-brands-svg-icons";
 import { faGithubSquare } from "@fortawesome/free-brands-svg-icons";
 import { faDiscord } from "@fortawesome/free-brands-svg-icons";
 import { faTelegram } from "@fortawesome/free-brands-svg-icons";
+import { faXTwitter } from "@fortawesome/free-brands-svg-icons";
 import { faCode } from "@fortawesome/free-solid-svg-icons";
 ---
 
-<footer
-  class="bg-[#14272a] w-full h-[18rem] md:h-[18rem] text-base"
->
+<footer class="bg-[#14272a] w-full h-[18rem] md:h-[18rem] text-base">
   <div
     title="logo"
     class="flex items-center gap-4 justify-center mt-3 mb-10 pt-10"
   >
-    <img src="../../logo.svg" class="rounded-full size-12" />
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      width="500"
+      zoomAndPan="magnify"
+      viewBox="0 0 375 374.999991"
+      height="500"
+      preserveAspectRatio="xMidYMid meet"
+      version="1.0"
+      class="size-12 rounded-full hover:scale-125 transition-all duration-500"
+    >
+      <rect
+        x="-37.5"
+        width="450"
+        fill="#ffffff"
+        y="-37.499999"
+        height="449.999989"
+        fill-opacity="1"></rect>
+      <rect
+        x="-37.5"
+        width="450"
+        fill="#ffffff"
+        y="-37.499999"
+        height="449.999989"
+        fill-opacity="1"></rect>
+      <rect
+        x="-37.5"
+        width="450"
+        fill="#0b4650"
+        y="-37.499999"
+        height="449.999989"
+        fill-opacity="1"></rect>
+      <path
+        fill="#e6ff2b"
+        d="M 86.28125 237.242188 C 93.199219 226.617188 105.136719 216.828125 125.632812 216.828125 C 170.449219 216.828125 176.296875 263.636719 176.296875 263.636719 L 200.652344 263.636719 C 200.652344 263.636719 204.0625 216.828125 249.367188 216.828125 C 270.625 216.828125 283.085938 227.136719 290.328125 238.074219 L 306.515625 221.640625 C 296.578125 207.445312 279.328125 195.113281 249.367188 195.113281 C 208.445312 195.113281 188.472656 228.410156 188.472656 228.410156 C 188.472656 228.410156 168.015625 195.113281 125.632812 195.113281 C 96.675781 195.113281 79.589844 206.628906 69.511719 220.21875 Z M 86.28125 237.242188 "
+        fill-opacity="1"
+        fill-rule="evenodd"></path>
+      <path
+        fill="#e6ff2b"
+        d="M 237.976562 284.457031 C 241.597656 283.953125 245.394531 283.679688 249.367188 283.679688 C 255.414062 283.679688 261.03125 284.140625 266.25 284.996094 L 201.96875 90 L 172.75 90 L 108.75 284.996094 C 113.96875 284.140625 119.589844 283.679688 125.632812 283.679688 C 129.214844 283.679688 132.660156 283.890625 135.96875 284.28125 L 185.96875 124.59375 L 187.640625 124.59375 Z M 237.976562 284.457031 "
+        fill-opacity="1"
+        fill-rule="evenodd"></path>
+      <path
+        fill="#0b4650"
+        d="M 87.878906 253.113281 L 56.378906 221.136719 L 61.480469 214.261719 C 73.46875 198.101562 93.546875 185.113281 125.632812 185.113281 C 149.628906 185.113281 167.472656 194.582031 179.191406 203.949219 C 182.820312 206.851562 185.878906 209.753906 188.375 212.386719 C 190.789062 209.78125 193.734375 206.910156 197.21875 204.042969 C 208.605469 194.664062 226 185.113281 249.367188 185.113281 C 282.609375 185.113281 302.914062 199.050781 314.707031 215.910156 L 319.480469 222.730469 L 288.796875 253.878906 L 281.988281 243.59375 C 276.25 234.921875 266.679688 226.828125 249.367188 226.828125 C 231.070312 226.828125 221.890625 235.875 216.757812 245.097656 C 214.078125 249.914062 212.515625 254.828125 211.628906 258.601562 C 211.191406 260.46875 210.933594 262.003906 210.789062 263.03125 C 210.714844 263.542969 210.671875 263.925781 210.648438 264.15625 C 210.636719 264.269531 210.628906 264.347656 210.625 264.382812 C 210.625 264.386719 210.625 264.390625 210.625 264.394531 C 210.625 264.398438 210.621094 264.402344 210.621094 264.40625 L 209.949219 273.636719 L 167.46875 273.636719 L 166.378906 264.917969 C 166.378906 264.914062 166.378906 264.910156 166.375 264.90625 C 166.375 264.902344 166.375 264.898438 166.375 264.890625 C 166.371094 264.855469 166.359375 264.777344 166.339844 264.660156 C 166.304688 264.425781 166.238281 264.039062 166.140625 263.523438 C 165.9375 262.484375 165.597656 260.941406 165.0625 259.058594 C 163.984375 255.257812 162.160156 250.285156 159.210938 245.398438 C 153.492188 235.929688 143.726562 226.828125 125.632812 226.828125 C 109.039062 226.828125 100.039062 234.445312 94.660156 242.703125 Z M 194.878906 220.097656 C 190.597656 224.867188 188.472656 228.410156 188.472656 228.410156 C 188.472656 228.410156 186.324219 224.90625 181.972656 220.175781 C 172.902344 210.316406 154.273438 195.113281 125.632812 195.113281 C 96.675781 195.113281 79.589844 206.628906 69.511719 220.21875 L 86.28125 237.242188 C 88.046875 234.535156 90.136719 231.878906 92.613281 229.421875 C 99.847656 222.261719 110.367188 216.828125 125.632812 216.828125 C 170.449219 216.828125 176.296875 263.636719 176.296875 263.636719 L 200.652344 263.636719 C 200.652344 263.636719 204.0625 216.828125 249.367188 216.828125 C 265.394531 216.828125 276.425781 222.6875 283.984375 230.261719 C 286.449219 232.734375 288.546875 235.386719 290.328125 238.074219 L 306.515625 221.640625 C 296.578125 207.445312 279.328125 195.113281 249.367188 195.113281 C 221.789062 195.113281 203.726562 210.234375 194.878906 220.097656 Z M 194.878906 220.097656 "
+        fill-opacity="1"
+        fill-rule="evenodd"></path>
+    </svg>
     <h1 class="hidden md:flex font-bold text-white text-xs">
       Aula de Software Libre - FP Córdoba
     </h1>
@@ -24,6 +70,7 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
     <ul class="flex items-center gap-6 justify-center text-slate-300">
       <li>
         <a
+          id="Linkedin"
           href="https://www.linkedin.com/company/aula-de-software-libre-lope-de-vega/"
           class="hover:text-white transition-all duration-300"
         >
@@ -35,6 +82,7 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
       </li>
       <li>
         <a
+          id="Github"
           href="https://github.com/AulaSoftwareLibreCordoba"
           class="hover:text-white transition-all duration-300"
         >
@@ -46,6 +94,7 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
       </li>
       <li>
         <a
+          id="Discord"
           href="https://discord.gg/p6bE7uJCK2"
           class="hover:text-white transition-all duration-300"
         >
@@ -57,6 +106,7 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
       </li>
       <li>
         <a
+          id="Telegram"
           href="https://t.me/+buqc7nlJ4oM2MzJk"
           class="hover:text-white transition-all duration-300"
         >
@@ -66,14 +116,26 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
           />
         </a>
       </li>
+      <li>
+        <a
+          id="X"
+          href="https://x.com/SoftwareLibreFP"
+          class="hover:text-white transition-all duration-300"
+        >
+          <FontAwesomeIcon
+            icon={faXTwitter}
+            className="size-10 md:size-12 transition-all duration-300 hover:scale-125 focus:scale-125"
+          />
+        </a>
+      </li>
     </ul>
   </div>
 
   <div class="flex items-center justify-center gap-2">
-    <FontAwesomeIcon icon={faCode} className="size-3 text-slate-500" />
-    <p class="mt-10 mb-10 text-center text-xs text-slate-500">
+    <FontAwesomeIcon icon={faCode} className="size-3 text-slate-300" />
+    <p class="mt-10 mb-10 text-center text-xs text-slate-300">
       Diseñado y desarrollado por el Aula de Software Libre
     </p>
-    <FontAwesomeIcon icon={faCode} className="size-3 text-slate-500" />
+    <FontAwesomeIcon icon={faCode} className="size-3 text-slate-300" />
   </div>
 </footer>
