--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -62,7 +62,7 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
                   >
                     Iniciar sesión
                   </button>
-                  <p class="text-gray-500 m-5 mb-11">
+                  <p class="text-slate-400 m-5 mb-11">
                     ¿No tienes una cuenta?
                     <a
                       href="/register"
@@ -82,13 +82,12 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
 
   <div
     id="alertContainer"
-    class="fixed bottom-10 right-4 flex justify-center items-end z-50 hidden"
+    class="fixed bottom-10 right-4 justify-center items-end z-50 hidden"
   >
     <div
       id="alertMessage"
       class="flex flex-col gap-2 w-72 sm:w-80 text-xs sm:text-sm z-50"
     >
-      <!-- El mensaje de alerta se insertará aquí -->
     </div>
   </div>
 
