--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -77,7 +77,7 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
                   >
                     Registrarme
                   </button>
-                  <p class="text-gray-500 m-5 mb-11">
+                  <p class="text-slate-400 m-5 mb-11">
                     ¿Ya tienes una cuenta?
                     <a
                       href="/login"
@@ -97,13 +97,12 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
 
   <div
     id="alertContainer"
-    class="fixed bottom-10 right-4 flex justify-center items-end z-50 hidden"
+    class="fixed bottom-10 right-4 justify-center items-end z-50 hidden"
   >
     <div
       id="alertMessage"
       class="flex flex-col gap-2 w-72 sm:w-80 text-xs sm:text-sm z-50"
     >
-      <!-- El mensaje de alerta se insertará aquí -->
     </div>
   </div>
 
