--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,8 @@
-<header
-  class="bg-gradient-to-b from-[#14272a] to-transparent w-screen h-20 fixed z-50"
->
+<header class="bg-gradient-to-b from-[#14272a] to-transparent w-screen h-20 fixed z-50">
   <div class="flex items-center h-full justify-center gap-10">
     <ul class="flex gap-5 text-slate-300">
       <li>
-        <a href="/">
+        <a href="/" class="flex items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -15,6 +13,7 @@
             preserveAspectRatio="xMidYMid meet"
             version="1.0"
             class="size-12 rounded-full hover:scale-125 transition-all duration-500"
+            aria-label="Logo"
           >
             <rect
               x="-37.5"
