--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,15 +16,14 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image" href="../../logo.svg" />
-		<link rel="stylesheet" href="/styles/global.css">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
-		<Header client:visible/>
+		<Header/>
 		<slot />
 
-		<Footer client:visible/>
+		<Footer/>
 	</body>
 </html>
 
