--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -106,7 +106,7 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
     </div>
   </div>
 
-  <script define:vars={{ apiUrl }}>
+  <script is:inline define:vars={{ apiUrl }}>
     const formulario = document.getElementById("register");
     const alertContainer = document.getElementById("alertContainer");
     const alertMessage = document.getElementById("alertMessage");
