mejoras SEO, accesibilidad y rendimiento de la web

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -73,6 +73,8 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
           id="Linkedin"
           href="https://www.linkedin.com/company/aula-de-software-libre-lope-de-vega/"
           class="hover:text-white transition-all duration-300"
+          aria-label="Visita nuestro perfil de LinkedIn"
+          title="LinkedIn"
         >
           <FontAwesomeIcon
             icon={faLinkedin}
@@ -85,6 +87,8 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
           id="Github"
           href="https://github.com/AulaSoftwareLibreCordoba"
           class="hover:text-white transition-all duration-300"
+          aria-label="Visita nuestro perfil de GitHub"
+          title="GitHub"
         >
           <FontAwesomeIcon
             icon={faGithubSquare}
@@ -97,6 +101,8 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
           id="Discord"
           href="https://discord.gg/p6bE7uJCK2"
           class="hover:text-white transition-all duration-300"
+          aria-label="Únete a nuestro servidor de Discord"
+          title="Discord"
         >
           <FontAwesomeIcon
             icon={faDiscord}
@@ -109,6 +115,8 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
           id="Telegram"
           href="https://t.me/+buqc7nlJ4oM2MzJk"
           class="hover:text-white transition-all duration-300"
+          aria-label="Únete a nuestro canal de Telegram"
+          title="Telegram"
         >
           <FontAwesomeIcon
             icon={faTelegram}
@@ -121,6 +129,8 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
           id="X"
           href="https://x.com/SoftwareLibreFP"
           class="hover:text-white transition-all duration-300"
+          aria-label="Visita nuestro perfil de X"
+          title="X"
         >
           <FontAwesomeIcon
             icon={faXTwitter}
