--- a/src/pages/aula.astro
+++ b/src/pages/aula.astro
@@ -20,9 +20,9 @@ import Layout from "../layouts/Layout.astro";
             id="main-title"
             class="mx-auto font-bold text-4xl sm:text-5xl lg:text-6xl text-white mb-4 leading-tight"
           >
-            <span class="text-main">Aula de Software Libre</span>
+            <span class="important-text text-main">Aula de Software Libre</span>
             <br />
-            <span class="text-white">FP Córdoba</span>
+            <span class="important-text text-white">FP Córdoba</span>
           </h1>
 
           <nav
