--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,8 @@ import Layout from "../layouts/Layout.astro";
       <h1
         class="max-w-lg mx-auto font-bold text-4xl md:text-6xl xl:text-6xl text-white mb-4"
       >
-        <span class="text-white">Bienvenid@ al</span>
-        <span class="text-main">Aula de Software Libre</span>
+        <span class="important-text text-white">Bienvenid@ al</span>
+        <span class="important-text text-main">Aula de Software Libre</span>
       </h1>
       <p
         class="max-w-md mx-auto text-sm md:text-lg font-normal text-slate-300 mb-6"
@@ -31,6 +31,8 @@ import Layout from "../layouts/Layout.astro";
       <img
         src="/photo.webp"
         alt="Github Img"
+        width="800"
+        height="600"
         class="rounded-t-3xl h-auto w-[95%] md:w-[70%] lg:w-[60%] xl:w-[50%] object-contain shadow-2xl"
       />
     </div>
