--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -12,10 +12,10 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
       class="flex-grow flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center"
     >
       <h1
-        class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-16 leading-tight"
+        class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-16 leading-tight "
       >
-        <span class="text-white">Inicio de </span>
-        <span class="text-main">sesión</span>
+        <span class="important-text text-white">Inicio de </span>
+        <span class="important-text text-main">sesión</span>
       </h1>
 
       <section
@@ -58,7 +58,7 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
                 <div class="text-center">
                   <button
                     type="submit"
-                    class="hover:scale-105 ease-in-out inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-slate-800 shadow-primary-3 transition-all duration-300 bg-main hover:bg-[#a3af4a] hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
+                    class="important-text hover:scale-105 ease-in-out inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-slate-800 shadow-primary-3 transition-all duration-300 bg-main hover:bg-[#a3af4a] hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
                   >
                     Iniciar sesión
                   </button>
