--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -14,8 +14,8 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
       <h1
         class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-16 leading-tight"
       >
-        <span class="text-white">Crea una </span>
-        <span class="text-main">cuenta</span>
+        <span class="important-text text-white">Crea una </span>
+        <span class="important-text text-main">cuenta</span>
       </h1>
 
       <section
@@ -73,7 +73,7 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
                 <div class="text-center">
                   <button
                     type="submit"
-                    class="hover:scale-105 ease-in-out inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-slate-800 shadow-primary-3 transition-all duration-300 bg-main hover:bg-[#a3af4a] hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
+                    class="important-text hover:scale-105 ease-in-out inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-slate-800 shadow-primary-3 transition-all duration-300 bg-main hover:bg-[#a3af4a] hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
                   >
                     Registrarme
                   </button>
