--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Onest:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@400;700&display=swap'); /* Asegúrate de cargar también el peso 400 (normal) */
 
 body {
     font-family: 'Onest', sans-serif;
     font-display: swap;
+    font-weight: 400; 
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 1000;
+}
+
+.important-text {
+    font-weight: 1000;
+}
+
+p, span, li {
+    font-weight: 400; 
 }
