--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Layout from "../layouts/Layout.astro";
 
     <div class="w-full flex justify-center mt-auto px-4">
       <img
-        src="/photo.webp"
+        src="/photo.avif"
         alt="Github Img"
         width="800"
         height="600"
